--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-amin portfoio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1><span class="red-color">Welcome To</span> </h1>
+            <h1> <span class="orange-color">Al-amin</span> world!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/ekramul-islam-956849228/?lipi=urn%3Ali%3Apage%3Aprofile_view_index_index%3Bc9d603ae-11fb-472d-a669-b3bf9a047868 ">HAIR
+                ME </a>
+        </div>
+        <div class="half-width">
+            <img src="images/Al-amin.bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
